regressions/marans/SemanticErrors/sameNameDiffType.ic
//output: Failed.

class A {
      int m() {
      	  int x;
	  string x; 
	  return 5;
      }
}